Add a new RESTfule endpoint for deletion.
